--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-meta-tags": "^0.7.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stickynode": "^2.1.1"
